--- a/CustomListView/app/src/main/AndroidManifest.xml
+++ b/CustomListView/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tklimczak.webviewapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.tklimczak.customlistview">
+
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,4 +17,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
